--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,12 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 100
+      - uses: actions/setup-node@v4
+        with: 
+          node-version: '20.x'
       - run: yarn install --frozen-lockfile
       - run: |
           yarn lint
@@ -22,10 +25,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: unit-tests
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 100
-
+      - uses: actions/setup-node@v4
+        with: 
+          node-version: '20.x'
       - uses: ./
         id: has-changed-path
         with:
