--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "GitHub Action that saves time and money in monorepo environments",
   "main": "src/index.js",
+  "engines": {
+    "node": "20"
+  },
   "scripts": {
     "lint": "eslint .",
     "prepare": "ncc build src/index.js -o dist --source-map",
@@ -17,13 +20,13 @@
   },
   "homepage": "https://github.com/MarceloPrado/has-changed-path#readme",
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/exec": "^1.0.4"
+    "@actions/core": "^1.10.1",
+    "@actions/exec": "^1.1.1"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.23.0",
-    "eslint": "^7.7.0",
-    "eslint-plugin-import": "^2.22.0",
-    "jest": "^26.4.2"
+    "@vercel/ncc": "^0.38.1",
+    "eslint": "^8",
+    "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0"
   }
 }
