--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Has Changed Path"
+name: "Has Changed Path with Branch Support"
 description: "Detects whether a path or a combination of paths were changed in the previous commit"
 inputs:
   paths: # one or more paths
